# ai-proofread-plugin

./: .gitignore  CMakeLists.txt  README.md  ai-proofread-plugin.plugin  ai_proofread_plugin.py  cmake_uninstall.cmake  prompts.json
src/: CMakeLists.txt  ai-proofread-plugin.c  m-chatgpt-api.c  m-chatgpt-api.h  m-msg-composer-extension.c  m-msg-composer-extension.h  m-shell-view-extension.c  m-version.h
